# service/userService.go
@@ -34,3 +34,28 @@ func PageQueryUserList(c *gin.Context) {
 	sizeInt, _ := strconv.Atoi(size)
 	c.JSON(200, response.Ok.WithData(models.PageQueryUserList(pageInt, sizeInt)))
 }
+
+// CreateUser 创建一个用户
+// @Tags 创建一个用户
+// @BasePath /user
+// @Summary 用于用户注册
+// @Param param body models.UserBasic true "上传的JSON"
+// @Produce json
+// @Success 200 {UserBasic} []*UserBasic
+// @Router /user/register [post]
+func CreateUser(c *gin.Context) {
+	userBasic := models.UserBasic{}
+	// 第二次输入的密码
+	rePassword := c.Query("rePassword")
+	if err := c.BindJSON(&userBasic); err != nil || userBasic.Name == "" || userBasic.Age <= 0 || userBasic.PassWord == "" {
+		c.JSON(500, response.Err.WithMsg("参数缺失"))
+		return
+	}
+	if userBasic.PassWord != rePassword {
+		c.JSON(-1, response.AppErr.WithMsg("两次密码不一致"))
+		return
+	}
+	// 插入数据
+	models.InsetOne(userBasic)
+	c.JSON(200, response.Ok)
+}
